@@ -15,6 +15,7 @@
 typedef struct _SPDashSelector SPDashSelector;
 
 #include <gtk/gtkwidget.h>
+#include "../xml/repr.h"
 
 #define SP_TYPE_DASH_SELECTOR (sp_dash_selector_get_type ())
 #define SP_DASH_SELECTOR(o) (GTK_CHECK_CAST ((o), SP_TYPE_DASH_SELECTOR, SPDashSelector))
@@ -22,7 +23,7 @@ typedef struct _SPDashSelector SPDashSelector;
 
 GtkType sp_dash_selector_get_type (void);
 
-GtkWidget *sp_dash_selector_new (void);
+GtkWidget *sp_dash_selector_new (SPRepr *repr);
 
 void sp_dash_selector_set_dash (SPDashSelector *dsel, int ndash, double *dash, double offset);
 void sp_dash_selector_get_dash (SPDashSelector *dsel, int *ndash, double **dash, double *offset);
