@@ -2,6 +2,7 @@
 
 	* src/widgets/dash-selector.c (sp_dash_selector_menu_item_new): Use created
 	GC, as widget is not mapped yet
+	(sp_dash_selector_new): Load stroke definitions from preferences
 
 2002-11-17  Lauris Kaplinski  <lauris@kaplinski.com>
 
